[gd_scene load_steps=39 format=2]

[ext_resource path="res://Personaje/frente2.png" type="Texture" id=1]
[ext_resource path="res://tiles/uno.tres" type="TileSet" id=2]
[ext_resource path="res://Personaje/frente.png" type="Texture" id=3]
[ext_resource path="res://Personaje/frente1.png" type="Texture" id=4]
[ext_resource path="res://Personaje/Der1.png" type="Texture" id=5]
[ext_resource path="res://Personaje/Der0.png" type="Texture" id=6]
[ext_resource path="res://Personaje/Der2.png" type="Texture" id=7]
[ext_resource path="res://pj.gd" type="Script" id=8]
[ext_resource path="res://balin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Interf.tscn" type="PackedScene" id=10]
[ext_resource path="res://Escenario/B12.png" type="Texture" id=11]
[ext_resource path="res://Escenario/B22.png" type="Texture" id=12]
[ext_resource path="res://obj.gd" type="Script" id=13]
[ext_resource path="res://enemigp.tscn" type="PackedScene" id=14]
[ext_resource path="res://tuto.gd" type="Script" id=15]
[ext_resource path="res://sonidos/SonidoFondoJuego.wav" type="AudioStream" id=16]
[ext_resource path="res://teleferics.gd" type="Script" id=17]
[ext_resource path="res://sonidos/teleferic.wav" type="AudioStream" id=18]
[ext_resource path="res://Edificios/rojo.png" type="Texture" id=19]
[ext_resource path="res://Escenario/contenedor.png" type="Texture" id=20]
[ext_resource path="res://Escenario/piso.jpg" type="Texture" id=21]
[ext_resource path="res://tutomsj/tuto4.png" type="Texture" id=22]
[ext_resource path="res://tutomsj/tuto1.png" type="Texture" id=23]
[ext_resource path="res://tutomsj/tuto3.png" type="Texture" id=24]
[ext_resource path="res://tutomsj/tuto7.png" type="Texture" id=25]
[ext_resource path="res://tutomsj/tuto6.png" type="Texture" id=26]
[ext_resource path="res://tutomsj/tutorial1.png" type="Texture" id=27]
[ext_resource path="res://tutomsj/tuto5.png" type="Texture" id=28]
[ext_resource path="res://tutomsj/tuto8.png" type="Texture" id=29]
[ext_resource path="res://tutomsj/tuto9.png" type="Texture" id=30]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 42.629, 46.3454 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "frent",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "der",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.8929
height = 65.7782

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.4173
height = 64.8347

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 62.3224, 26.1342 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 28.6472
height = 10.1366

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 56.2634, 63.8543 )

[node name="tuto" type="Node2D"]
script = ExtResource( 15 )

[node name="mensajess" type="Sprite" parent="."]

[node name="Sprite" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 450.676, 313.763 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 23 )

[node name="Sprite2" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 1046.66, 290.746 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )

[node name="Sprite3" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 1589.19, 292.378 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 27 )

[node name="Sprite5" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 2992.04, 208.751 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 28 )

[node name="Sprite7" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 4598.76, -79.1848 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 25 )

[node name="Sprite8" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 4865.6, 225.354 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )

[node name="Sprite9" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 5553.3, 318.633 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 30 )

[node name="Sprite6" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 2636.77, 318.3 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )

[node name="Sprite4" type="Sprite" parent="mensajess"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 1312.8, 289.623 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 24 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 65598, 0, 0, 65599, 0, 0, 65600, 0, 0, 65601, 0, 0, 65602, 0, 0, 65603, 0, 0, 65604, 0, 0, 65605, 0, 0, 65606, 0, 0, 65607, 0, 0, 65608, 0, 0, 65609, 0, 0, 65610, 0, 0, 65611, 0, 0, 65612, 0, 0, 65613, 0, 0, 65614, 0, 0, 65615, 0, 0, 589822, 1, 0, 524307, 1, 0, 524323, 1, 0, 524361, 1, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 0, 0, 589893, 0, 0, 589894, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 589899, 0, 0, 589900, 0, 0, 589901, 0, 0, 589902, 0, 0, 589903, 0, 0, 589904, 0, 0, 589905, 0, 0, 589906, 0, 0, 589907, 0, 0, 589908, 0, 0, 589909, 0, 0, 589910, 0, 0, 589911, 0, 0, 589912, 0, 0 )

[node name="teleferics" type="Node2D" parent="."]
position = Vector2( 124.716, 235.038 )
script = ExtResource( 17 )

[node name="teleferico" type="KinematicBody2D" parent="teleferics"]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="teleferics/teleferico"]
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="teleferics/teleferico"]
position = Vector2( -2.9039, 32.6689 )
shape = SubResource( 10 )

[node name="Tween" type="Tween" parent="teleferics"]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="comienzo" type="Position2D" parent="teleferics"]
position = Vector2( 2873.42, -39.1575 )

[node name="llegada" type="Position2D" parent="teleferics"]
position = Vector2( 3808.01, -637.517 )

[node name="sonide" type="AudioStreamPlayer2D" parent="teleferics"]
stream = ExtResource( 18 )
volume_db = 1.0
max_distance = 1000.0

[node name="timesonido" type="Timer" parent="teleferics"]
wait_time = 7.0

[node name="pj" type="KinematicBody2D" parent="." groups=[
"pj",
]]
position = Vector2( 211.965, 452.308 )
script = ExtResource( 8 )
balin = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="pj"]
position = Vector2( -0.539047, -0.905479 )
scale = Vector2( 0.225989, 0.221488 )
frames = SubResource( 1 )
animation = "frent"
frame = 2
playing = true

[node name="Colision" type="CollisionShape2D" parent="pj"]
shape = SubResource( 2 )

[node name="posicionbala" type="Position2D" parent="pj"]
position = Vector2( 0.499466, -12.0457 )

[node name="Camera2D" type="Camera2D" parent="pj"]
current = true
limit_left = 0
limit_right = 100000
limit_bottom = 630

[node name="Area2D" type="Area2D" parent="pj"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pj/Area2D"]
shape = SubResource( 3 )

[node name="Invulner" type="Timer" parent="pj"]

[node name="disp" type="Timer" parent="pj"]

[node name="Interf" parent="." instance=ExtResource( 10 )]

[node name="timejuego" type="Timer" parent="."]

[node name="piso" type="StaticBody2D" parent="."]
position = Vector2( 3462.36, 416.563 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="piso"]
position = Vector2( 0, 8.58307e-06 )
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso"]
shape = SubResource( 11 )

[node name="piso3" type="StaticBody2D" parent="."]
position = Vector2( 5363.28, 96.8151 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="piso3"]
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso3"]
shape = SubResource( 11 )

[node name="piso4" type="StaticBody2D" parent="."]
position = Vector2( 5206.64, 278.316 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="piso4"]
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso4"]
shape = SubResource( 11 )

[node name="piso5" type="StaticBody2D" parent="."]
position = Vector2( 5017.68, 397.659 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="piso5"]
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso5"]
shape = SubResource( 11 )

[node name="piso2" type="StaticBody2D" parent="."]
position = Vector2( 3025.03, 415.019 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="piso2"]
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso2"]
shape = SubResource( 11 )

[node name="obj" type="Area2D" parent="."]
position = Vector2( 1051.65, 525.599 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="obj"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj"]
position = Vector2( -0.735092, 19.1124 )
shape = SubResource( 5 )

[node name="obj2" type="Area2D" parent="."]
position = Vector2( 2728.91, 518.834 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="obj2"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj2"]
position = Vector2( -0.735092, 19.1124 )
shape = SubResource( 5 )

[node name="obj3" type="Area2D" parent="."]
position = Vector2( 4203.3, 14.1133 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="obj3"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj3"]
position = Vector2( -0.735092, 19.1124 )
shape = SubResource( 5 )

[node name="obj4" type="Area2D" parent="."]
position = Vector2( 4899.46, 14.1133 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="obj4"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj4"]
position = Vector2( -0.735092, 19.1124 )
shape = SubResource( 5 )

[node name="obj5" type="Area2D" parent="."]
position = Vector2( 4128.71, 528.78 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="obj5"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="obj5"]
position = Vector2( -0.735092, 19.1124 )
shape = SubResource( 5 )

[node name="enemigp" parent="." instance=ExtResource( 14 )]
position = Vector2( 1973.38, 530.113 )

[node name="AnimatedSprite" parent="enemigp" index="0"]
frame = 1

[node name="enemigp3" parent="." instance=ExtResource( 14 )]
position = Vector2( 2935.04, 534.484 )

[node name="AnimatedSprite" parent="enemigp3" index="0"]
frame = 1

[node name="enemigp2" parent="." instance=ExtResource( 14 )]
position = Vector2( 1578.55, 527.13 )

[node name="AnimatedSprite" parent="enemigp2" index="0"]
frame = 1

[node name="timemusi" type="Timer" parent="."]
wait_time = 59.0

[node name="conteiner" type="Area2D" parent="."]
position = Vector2( 5573.04, 496.521 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="conteiner"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="conteiner"]
shape = SubResource( 9 )

[node name="efectos" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
[connection signal="timeout" from="teleferics/timesonido" to="teleferics" method="_on_timesonido_timeout"]
[connection signal="body_entered" from="pj/Area2D" to="pj" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="pj/Invulner" to="pj" method="_on_Invulner_timeout"]
[connection signal="timeout" from="pj/disp" to="pj" method="_on_disp_timeout"]
[connection signal="timeout" from="timejuego" to="." method="_on_timejuego_timeout"]
[connection signal="body_entered" from="obj" to="obj" method="_on_obj_body_entered"]
[connection signal="body_entered" from="obj2" to="obj2" method="_on_obj_body_entered"]
[connection signal="body_entered" from="obj3" to="obj3" method="_on_obj_body_entered"]
[connection signal="body_entered" from="obj4" to="obj4" method="_on_obj_body_entered"]
[connection signal="body_entered" from="obj5" to="obj5" method="_on_obj_body_entered"]
[connection signal="timeout" from="timemusi" to="." method="_on_timemusi_timeout"]
[connection signal="body_entered" from="conteiner" to="." method="_on_conteiner_body_entered"]

[editable path="enemigp"]

[editable path="enemigp3"]

[editable path="enemigp2"]
